--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "vue": "^2.5.21",
     "vue-router": "^3.2.0",
     "vuetify": "^1.3.0",
